--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,7 +26,6 @@
   }
 }
 
-
 .lds-ellipsis {
   display: inline-block;
   position: relative;
@@ -81,4 +80,17 @@
   100% {
     transform: translate(24px, 0);
   }
+}
+
+@keyframes kenBurnsAnimation {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.1);
+  }
+}
+
+.ken-burns-background {
+  animation: kenBurnsAnimation 20s infinite alternate;
 }
