--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -98,3 +98,16 @@
     transform: translateY(0);
   }
 }
+
+/* DROPDOWN MENU CSS */
+
+.dropdown {
+  opacity: 0;
+  transform: translateY(-10px);
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.dropdown.open {
+  opacity: 1;
+  transform: translateY(0);
+}
