--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -101,13 +101,30 @@
 
 /* DROPDOWN MENU CSS */
 
-.dropdown {
-  opacity: 0;
-  transform: translateY(-10px);
-  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+@keyframes fadeInDown {
+  from {
+    transform: translateY(-40px); /* Move up by 20px initially */
+    z-index: -1;
+  }
+  to {
+    transform: translateY(0); /* Move down to original position */
+    z-index: 10;
+  }
 }
 
-.dropdown.open {
-  opacity: 1;
-  transform: translateY(0);
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.my-dropdown {
+  animation: fadeInDown 0.3s ease-in-out; /* Apply fadeIn animation */
+}
+
+.my-dropdown2 {
+  animation: fadeIn 0.8s ease-in; /* Apply fadeIn animation */
 }
