--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,10 @@
   box-sizing: border-box;
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
 @font-face {
   font-family: 'WarowniaBd';
   src: url('/public\fonts\Warownia\WarowniaBd.otf');
