--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -132,3 +132,12 @@
 .my-dropdown2 {
   animation: fadeIn 0.8s ease-in; /* Apply fadeIn animation */
 }
+
+.skill-item {
+  opacity: 100;
+  transition: opacity 0.7s ease-in-out; /* Adjust the duration and timing function as needed */
+}
+
+.flex-item:not(:has(details[open])) {
+  flex: 0 0 auto;
+}
